================================================================================
VERSION 3.0.2                                                         XX XX XXXX

================================================================================
VERSION 3.0.1                                                         22 08 2012

New:

    * Refactor promo mails to display only on_platal formations             -IOS
    * Visibility flags for castes-user management                           -IOS
    * Add open state for rooms belonging to groups                          -LAU
    * Improve remote IP detection and management                            -IOS
    * Add FlagSet field in meta objects                                     -IOS
    * Some useful scripts                                               -CYP/IOS
    * Offers the possibility to mark a news as non read after modification  -GUI
    * Add a doxygen configuration file                                      -IOS
    * Chatting system                                                       -PJ
    * User experience improvement in news selection                         -LAU
    * Course groups                                                         -BRI

New skins:

    * Aubade                                                            -YUY/QUA
    * Point Gamma                                                           -YUY
    * Cyber Attackès                                                        -KAN

Minimodules:

    * Xray                                                                  -OLI
    * X-Live                                                                -YUA
    * RER                                                                   -MAT
    * PiX                                                               -MAT/OLI
    * .GAMMA                                                                -YUA

Bug:

    * Prevent member searching when displaying a user group                 -LAU